using l10n jetpack package https://github.com/erikvold/l10n-jplib

--- a/package.json
+++ b/package.json
@@ -4,5 +4,6 @@
   "fullName": "Restart Jetpack",
   "author": "Erik Vold <erikvvold@gmail.com> (http://erikvold.com)",
   "license": "MIT",
-  "version": "0.1"
+  "version": "0.1",
+  "dependencies": ["addon-kit", "api-utils", "l10n"]
 }
