<version>3pre</version>
--HG--
branch : duplicate2window-default
extra : rebase_source : 7a94e849b9e7776f5fe699614bf251bb4cc97c62

--- a/src/install.rdf.in
+++ b/src/install.rdf.in
@@ -5,7 +5,7 @@
     <creator>Szabolcs Hubai</creator>
     <id>duplicate2window@szabolcs.hubai</id>
     <name>Duplicate 2 Window</name>
-    <version>2</version>
+    <version>3pre</version>
     <bootstrap>true</bootstrap>
     <type>2</type>
     <homepageURL>https://github.com/xabolcs/duplicate-2-window</homepageURL>
